influxdb3_write/src/snapshots/influxdb3_write__catalog__tests__catalog_serialization.snap
---
source: influxdb3_write/src/catalog.rs
expression: catalog
---
{
  "databases": {
    "test_db": {
      "name": "test_db",
      "tables": {
        "test_table_1": {
          "name": "test_table_1",
          "cols": {
            "bool_field": {
              "type": "bool",
              "influx_type": "field",
              "nullable": true
            },
            "f64_field": {
              "type": "f64",
              "influx_type": "field",
              "nullable": true
            },
            "i64_field": {
              "type": "i64",
              "influx_type": "field",
              "nullable": true
            },
            "string_field": {
              "type": "str",
              "influx_type": "field",
              "nullable": true
            },
            "tag_1": {
              "type": {
                "dict": [
                  "i32",
                  "str"
                ]
              },
              "influx_type": "tag",
              "nullable": true
            },
            "tag_2": {
              "type": {
                "dict": [
                  "i32",
                  "str"
                ]
              },
              "influx_type": "tag",
              "nullable": true
            },
            "tag_3": {
              "type": {
                "dict": [
                  "i32",
                  "str"
                ]
              },
              "influx_type": "tag",
              "nullable": true
            },
            "time": {
              "type": {
                "time": [
                  "ns",
                  null
                ]
              },
              "influx_type": "time",
              "nullable": false
            },
            "u64_field": {
              "type": "u64",
              "influx_type": "field",
              "nullable": true
            }
          }
        },
        "test_table_2": {
          "name": "test_table_2",
          "cols": {
            "bool_field": {
              "type": "bool",
              "influx_type": "field",
              "nullable": true
            },
            "f64_field": {
              "type": "f64",
              "influx_type": "field",
              "nullable": true
            },
            "i64_field": {
              "type": "i64",
              "influx_type": "field",
              "nullable": true
            },
            "string_field": {
              "type": "str",
              "influx_type": "field",
              "nullable": true
            },
            "tag_1": {
              "type": {
                "dict": [
                  "i32",
                  "str"
                ]
              },
              "influx_type": "tag",
              "nullable": true
            },
            "tag_2": {
              "type": {
                "dict": [
                  "i32",
                  "str"
                ]
              },
              "influx_type": "tag",
              "nullable": true
            },
            "tag_3": {
              "type": {
                "dict": [
                  "i32",
                  "str"
                ]
              },
              "influx_type": "tag",
              "nullable": true
            },
            "time": {
              "type": {
                "time": [
                  "ns",
                  null
                ]
              },
              "influx_type": "time",
              "nullable": false
            },
            "u64_field": {
              "type": "u64",
              "influx_type": "field",
              "nullable": true
            }
          }
        }
      }
    }
  },
  "sequence": 1
}
