influxdb3_write/src/snapshots/influxdb3_write__catalog__tests__serialize_series_keys.snap
---
source: influxdb3_write/src/catalog.rs
expression: catalog
---
{
  "databases": {
    "test_db": {
      "name": "test_db",
      "tables": {
        "test_table_1": {
          "name": "test_table_1",
          "key": [
            "tag_1",
            "tag_2",
            "tag_3"
          ],
          "cols": {
            "field": {
              "type": "str",
              "influx_type": "field",
              "nullable": true
            },
            "tag_1": {
              "type": {
                "dict": [
                  "i32",
                  "str"
                ]
              },
              "influx_type": "tag",
              "nullable": false
            },
            "tag_2": {
              "type": {
                "dict": [
                  "i32",
                  "str"
                ]
              },
              "influx_type": "tag",
              "nullable": false
            },
            "tag_3": {
              "type": {
                "dict": [
                  "i32",
                  "str"
                ]
              },
              "influx_type": "tag",
              "nullable": false
            },
            "time": {
              "type": {
                "time": [
                  "ns",
                  null
                ]
              },
              "influx_type": "time",
              "nullable": false
            }
          }
        }
      }
    }
  },
  "sequence": 1
}
